tests/cases/positive/unit-mult.frtl
a : Float(Unit(m)) = 2.0
b : Float(Unit(m)) = 3.0
it : Float(Unit(m^2)) = a * b