tests/cases/negative/units-mismatch2.frtl
y : Float(Unit(m) & Quantity(length)) = 2.0
it : Float(Unit(m) & Quantity(length)) = y * y